# test_tech_disney

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.cursor/rules/: translation-pipeline.mdc
.github/: copilot-instructions.md
events/: sample_async_event.json  sample_local_event.json
input/: memo.docx  products.xlsx
output/: memo_en.docx  products_en.xlsx
src/translator/: __init__.py  async_handler.py  excel.py  jobs.py  lambda_handler.py  mock_service.py  pdf.py  pipeline.py  service.py  word.py  worker.py
tests/: test_async_jobs.py  test_excel_translation.py  test_integration_pipeline.py  test_lambda_handler.py  test_pdf_translation.py  test_pipeline.py  test_translation_service.py  test_word_translation.py
