[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "translator-pipeline"
version = "0.1.0"
description = "Local document translation pipeline for Excel, Word, and PDF files."
requires-python = ">=3.10"
dependencies = [
    "openpyxl",
    "python-docx",
    "pypdf",
    "reportlab",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
